added exam to repo

--- a/HM2/comp9417_hw2_spec.ipynb
+++ b/HM2/comp9417_hw2_spec.ipynb
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,11 +600,12 @@
     "            # back-propagation through time (unrolled)\n",
     "            for step in range(self.input_size - 1, -1, -1):\n",
     "                # TO DO: setup for the current step\n",
-    "                layer_input = outputs.pop()\n",
+    "                x1 = outputs.pop()\n",
+    "                layer_input = numpy.concatenate((x1, X[:, step, :]), axis=1)\n",
     "                weight = self.weights[0][:64, :] if (step != self.input_size - 1) else self.weights[1][:64, :] # we use the updated weights unless we are on first iteration\n",
     "\n",
     "                # TO DO: calculate gradients\n",
-    "                gradients, dW, db = self.derivatives_of_hidden_layer(previous_gradients, layer_output, numpy.concatenate((layer_input, X[:, step, :]), axis=1), weight)\n",
+    "                gradients, dW, db = self.derivatives_of_hidden_layer(previous_gradients, layer_output, layer_input, weight)\n",
     "                # print(numpy.shape(X))\n",
     "                # TO DO: update weights\n",
     "                self.weights[0] += self.learning_rate / X.shape[0] * dW # same code to update weights\n",
@@ -612,7 +613,7 @@
     "\n",
     "                # TO DO: setup for the next step\n",
     "                previous_gradients = gradients\n",
-    "                layer_output = layer_input\n",
+    "                layer_output = x1\n",
     "\n",
     "        print(f\"Finished training in {time.time() - timer_base} seconds\")\n",
     "\n",
@@ -665,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +724,7 @@
       "In iteration 4800, training accuracy is 0.7141573033707865.\n",
       "In iteration 4900, training accuracy is 0.7159550561797753.\n",
       "In iteration 5000, training accuracy is 0.717752808988764.\n",
-      "Finished training in 441.6219210624695 seconds\n"
+      "Finished training in 672.4821784496307 seconds\n"
      ]
     }
    ],
